# partnet_mobility_utils

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: deploy-site.yaml  main.yaml  merge-request.yaml  push.yaml  run-tests.yaml  test.yaml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/api/: core.md  render.md
notebooks/: demo_render.ipynb
partnet_mobility_utils/: articulate.py  dataset.py  pm_data.py  urdf.py
partnet_mobility_utils/data_lists/: extra_objs.txt  missing_objs.txt
partnet_mobility_utils/data_lists/categories/: Box.txt  Bucket.txt  Clock.txt  CoffeeMachine.txt  Display.txt  Door.txt  Eyeglasses.txt  Globe.txt  Lamp.txt  Laptop.txt  Oven.txt  Pen.txt  Phone.txt  Remote.txt  Safe.txt  Scissors.txt  StorageFurniture.txt  Suitcase.txt  Switch.txt  Table.txt  Toaster.txt  Toilet.txt  TrashCan.txt  USB.txt  WashingMachine.txt
partnet_mobility_utils/data_lists/umpnet/: test.txt  train_test.txt
partnet_mobility_utils/render/: __init__.py  pybullet.py  sapien.py  trimesh.py
scripts/: detect_invalid.py  generate_umpnet_splits.py  split_by_category.py
src/rpad/partnet_mobility_utils/: articulate.py  data.py  dataset.py  urdf.py
src/rpad/partnet_mobility_utils/data_lists/: all_ids.txt  well_formed.txt
src/rpad/partnet_mobility_utils/data_lists/categories/: Bottle.txt  Camera.txt  Cart.txt  Chair.txt  Dishwasher.txt  Dispenser.txt  Fan.txt  Faucet.txt  FoldingChair.txt  Kettle.txt  Keyboard.txt  KitchenPot.txt  Knife.txt  Lighter.txt  Microwave.txt  Mouse.txt  Pliers.txt  Printer.txt  Refrigerator.txt  Stapler.txt  Window.txt
src/rpad/partnet_mobility_utils/data_lists/umpnet/: test.txt  train_test.txt  train_train.txt
src/rpad/partnet_mobility_utils/render/: __init__.py  pybullet.py  sapien.py  trimesh.py
tests/: articulate_test.py  pm_data_test.py  pm_dataset_test.py  render_pybullet_test.py  render_sapien_test.py  render_trimesh_test.py
